# test-vcpkg-qscintilla-qt5

./: CMakeLists.txt  README.md  build_vcpkg.bat  main.cpp  vcpkg.json
cmake/Modules/: FindQt5QScintilla.cmake
